#27282 Fixes 2 faulty test cases